# api_template

./: .gitignore  README.md  app.py  pyproject.toml
core/: __init__.py  app.py  logger.py  route.py  types.py
routes/: ping.py
routes/v1/: ping.py
utils/: __init__.py  app.py  core.py  logger.py  types.py
