[tool.poetry]
name = "api-template"
version = "0.1.0"
description = ""
authors = ["du-cki <qwuakers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
aiohttp-devtools = "^1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
